<resources>
    <string name="app_name">BackgroundOpt</string>
    <string name="getRunningAppInfoBtn">Info of target running app</string>
    <string name="getTargetAppGroupBtn">Group of target app</string>
    <string name="queryInfoTipText">application uid for querying</string>
    <string name="queryInfoEditTextHint">application uid</string>
    <string name="doQueryBtn">Query</string>
    <string name="queryResultText">Launch a query~</string>
    <string name="getBackgroundTasks">Background tasks</string>
    <string name="appItemTipText1">tip1:</string>
    <string name="appItemTipText2">tip2:</string>
    <string name="appItemTipPackageName">"package name: "</string>
    <string name="appItemTipPid" translatable="false">pid:</string>
    <string name="getAppCompactItemsBtn">Compact tasts</string>
    <string name="appItemTipProcessName">"process name: "</string>
    <string name="appItemTipText3">"tip3: "</string>
    <string name="appItemTipUid" translatable="false">uid:</string>
    <string name="appItemTipText4">tip4:</string>
    <string name="appItemTipOomAdjScore" translatable="false">"adj: "</string>
    <string name="configureAppProcessAppNameText">application name</string>
    <string name="configureAppProcessVersionNameTipText" translatable="false">"versionName: "</string>
    <string name="configureAppProcessVersionCodeTipText" translatable="false">"versionCode: "</string>
    <string name="configureAppProcessItemProcessNameText" translatable="false">processName</string>
    <string name="configureAppProcessItemApplyConfigureNameText">configure name</string>
    <string name="configureAppProcessItemSelectConfigBtn">select</string>
    <string name="gotoConfigureAppProcessActivityBtn">Installed</string>
    <string name="installedAppItemAppNameText">appName</string>
    <string name="subProcessOomPolicyDialogDefaultBtn">Default</string>
    <string name="subProcessOomPolicyDialogMainProcessBtn">Main Process</string>
    <string name="subProcessOomPolicyDialogDoNothingBtn">Do nothing</string>
    <string name="subProcessOomPolicyDialogCustomBtn">Custom</string>
    <string name="showAllInstalledAppsSearchBtn">Search</string>
    <string name="moduleActive">Actived</string>
    <string name="moduleInActive">Inactived</string>
    <string name="configureAppProcessToolBar">processes of Application</string>
    <string name="showAllInstalledAppToolBar">Installed applications</string>
    <string name="menu_main_activity_toolbar_about">About</string>
    <string name="aboutAppProjectPathTipText">Project path</string>
    <string name="aboutAppProjectPathText" translatable="false">https://github.com/XingC123/BackgroundOpt</string>
    <string name="aboutAppThanksTip">Thanks</string>
    <string name="aboutAppToolBar">About</string>
    <string name="showAppCompactListToolBarText">List of processes to be compressed</string>
    <string name="showAppCompactListRecyclerViewTipText">
        1. This list is not a real-time list. Some erroneous data will be automatically removed.
        \n2. Some apps do not open for a long time, and the Splash page appears when they open again, which does not necessarily mean the app was killed
    </string>
    <string name="showBackgroundTasksToolBarText">Background tasks</string>
    <string name="appItemLastProcessingResultTipText">Last processing result:</string>
    <string name="appItemLastProcessingSuccessResultText" translatable="false">✔</string>
    <string name="appItemLastProcessingDoNothingResultText" translatable="false">▬</string>
    <string name="showAppCompactLisToolBarHelp">Help</string>
    <string name="showAppCompactLisToolBarHelpTipText" translatable="false">
        1. “上次执行结果”的值含义：
        \n\t\t1) ✔：意味着<b>已经执行过</b>。
        \n\t\t2) ▬：意味着<b>不满足执行条件因而未执行</b>(详见：使用手册-补充说明-第4条)
        \n\t\t3) ✪：意味着<b>暂无需执行</b>
        \n\t\t4) 空白：意味着<b>从未执行过</b>(进程可能被杀死再新建或初次加入, 导致处于此状态)

        \n2. <u><b>列表并非完全实时列表。</b></u>你所获取的列表，只是你点击按钮的一瞬间拿出来的数据。在进行展示时，<u><b>该数据可能已经被移除。</b></u>后台任务几分钟执行一次，因此实时刷新列表这个功能并没有意义。
    </string>
    <string name="appItemLastProcessingUnnecessaryResultText" translatable="false">✪</string>
    <string name="settingsModuleItemTitle">Module</string>
    <string name="settingsAutoStopCompactPrefText">Automatically stop compacting task</string>
    <string name="menu_main_activity_toolbar_settings">Settings</string>
    <string name="showAllInstalledAppsSearchTextHint">input a name of app to search</string>
    <string name="settingsForegroundProcTrimMemDefaultPolicyValue" translatable="false">RUNNING_MODERATE</string>
    <string name="settingsForegroundProcTrimMemPolicyPrefText">Memory trimming policy for foreground process</string>
    <string name="settingsForegroundProcTrimMemEnablePrefText">Enable Memory trimming for foreground process</string>
    <string name="menu_main_activity_toolbar_feature">User manual</string>
    <string name="activityFeatureFeatureIntroductionText" translatable="false">
        <b>1. 当前功能：</b>
        \n\t\t1) 进程保活(基于LMK)。所有调整了adj的模块都与本模块冲突，除非它关于adj的设置可以关闭。
        \n\t\t\t\t以下说明基于2024.4.17版本(所有模式在前台时，adj均为0)：
        \n\t\t\t\ta. 严格模式：此模式下，所有高优先级进程的oom_score_adj会始终处于0，且限制其主进程最大oom_score_adj为50，高优先级子进程最大oom_score_adj为100
        \n\t\t\t\tb. 次严格模式：此模式下，主进程oom_score_adj会始终处于1，高优先级子进程为51，且限制其主进程最大oom_score_adj为50，高优先级子进程最大oom_score_adj为100
        \n\t\t\t\tc. 平衡模式：此模式下，主进程oom_score_adj会始终处于1，但不限制其最大oom_score_adj
        \n\t\t\t\td. 平衡模式+：此模式下，主进程oom_score_adj会始终处于1，最大oom_score_adj限制逻辑同于严格模式
        \n\t\t\t\te. 宽容模式：此模式下，主进程oom_score_adj交由系统调节，不限制其最大oom_score_adj
        \n\t\t\t\tf. 除非在开启全局oom且作用范围选择"所有进程"，否则模块不会对oom_score_adj小于0的任何进程进行调整。也就是说，模块调整的oom分数是大于等于0的。

        \n\t\t2) 内存回收：向应用发送虚假信息，假装可用内存已不足，促使其进行资源释放。
        \n\t\t\t\ta. 设置页面的<u><i>“前台进程内存回收策略”</i></u><b>越往下代表当前可用内存越紧张</b>。
        \n\t\t\t\tb. 截至2024.3.8(2.2_vc197)，内存回收(前/后台)均为10m一次。墓碑后内存回收可能失效。但无需在意，墓碑的收益还是很可观的。

        \n\t\t3) 内存压缩：对后台进程按照指定的规则进行压缩。

        \n\t\t4) Simple Lmk: 与内核的slmk不同，本模块的Simple Lmk(以下简称slmk)是基于系统给予的oom_score_adj进行相应处理得来。
        \n\t\t\t\t在2024.3.7(2.2_vc197)的实现中，系统app主进程分数在[1, 3], 普通app的主进程oom分数在[4, 50]，子进程设置了“主进程”以及webview进程保护所使用的为[51, 100]。其余子进程在101+。共四级分类。
        \n\t\t\t\t如果你对某app启用了自定义主进程oom，那么仍将会使用设置的参数，而不会进行处理。
        \n\t\t\t\t如果你使用了宽松模式，那么模块也不会进行处理(只会在第一次触发oom设置时处理一次，后续不进行处理)。
        \n\t\t\t\t如果你觉得影响保后台，那么关闭此模式即可。
        \n\t\t\t\t<b>仅当OOM工作模式为"平衡模式"时才生效。</b>

        \n\t\t5) 全局OOM: 开启后会使用给定的oom分数来设置生效范围内的进程。<b>不推荐开启此功能。</b>
        \n\t\t\t\ta. 生效范围: xxx(adj&gt;0) -> 只有系统计算出的adj&gt;0的app的进程才会被管理。
        \n\t\t\t\tb. 自定义全局OOM值: 取值范围[-1000, 1000]。<b>模块支持对-800及以下取值的app划卡杀后台</b>

        \n\n<b>2. 补充说明：</b>
        \n\t\t1) “内存回收”和“内存压缩”受进程策略影响。
        \n\t\t2) <b>自启<i>(开机自启/杀死后台后自启)</i>的app依然会被模块管理</b>。
        \n\t\t3) 截至2023.11.03，模块对QQ、微信的推送进程默认处于“主进程”级别，即享受与主进程相同的处理方式。
        \n\t\t4) 截至2024.3.25(模块2.2.2_vc199)，对进程是否启用后台内存优化的部分判断条件为：系统计算的adj&gt;=0 且 资源占用达到阈值
        \n\t\t5) 截至2024.2.28(模块2.0_vc194)，Active分组的进程的oom_score_adj始终设置为0, 除非你配置了"自定义主进程oom"或启用了"全局oom"。
        \n\t\t6) 截至2024.3.11(模块2.2_vc197)，如果app配置了“<b>自定义主进程OOM</b>”, 那么此值优先于所有配置。
        \n\t\t7) 截至2024.2.28(模块2.0_vc194)，设置页“自动停止压缩任务”设置项已无实际意义。
        \n\t\t8) 可能与去日志版LSP冲突，导致后台任务/压缩列表为空。
        \n\t\t9) 截至2024.2.28(模块2.0_vc194)，本模块主要是对LMK进行处理，因此：① 所有调整了lmk的模块都与此模块冲突，除非你关闭冲突功能或确认其不会有影响。② 对miui的电量与性能的hook仅3处，其中2处为"手机设置"里面的息屏后杀后台。如果你担心冲突，可以仅使用其他模块的对电量与性能的hook，以及本模块的对系统的hook。③ 不要问xxx系统适配了没有，因为本模块只负责LMK的处理
        \n\t\t10) 内存压缩功能内核自己也有逻辑，模块不做内核也会去做。
        \n\t\t11) 截至2024.2.28(模块2.0_vc194)可能与禁用logd冲突，导致设备软重启。
        \n\t\t12) 截至2024.3.11(模块2.2_vc197)，模块会对以下情况做oom调整：
        \n\t\t\t\ta. 系统oom_score_adj&gt;0
        \n\t\t\t\tb. 以上条件不满足，但启用了“自定义主进程oom”。
        \n\t\t\t\tc. 以上条件不满足，但开启了全局OOM(具体是否执行看作用域描述)
        \n\t\t13) 截至2024.3.26(模块2.3_vc199)，app配置页的“管理Adj”功能生效条件：
        \n\t\t\t\ta. 系统计算的oom_score_adj&gt;0。
        \n\t\t\t\tb. 未使用“自定义主进程OOM”(即：本功能并不会影响“自定义主进程OOM”，其优先级仍然最高)或全局OOM。

        \n\t\t14) app配置页-主进程adj管理策略：
        \n\t\t\t\ta. 该配置旨在应用adj调整的最终阶段进行判定。
        \n\t\t\t\tb. 在adj调整基本规则生满足的前提下(详见“补充说明12”)，只有符合本功能所选项的情况下，adj调整才最终生效。
        \n\t\t\t\tc. 策略说明(2024.4.28，模块2.5_vc201版本)：
        \n\t\t\t\t\t\t① 从不：模块不对adj进行干预。
        \n\t\t\t\t\t\t② 拥有界面：后台含有界面时，模块会对其进行“保活”。不含界面时，模块会将其视为子进程级别处理adj。
        \n\t\t\t\t\t\t③ 强制：无论如何都进行adj调整。
        \n\t\t15) 设置-次级消息发送器：
        \n\t\t\t\t模块自2.5_vc201开始，默认使用Socket作为前后端通信渠道。但可能出现不可控的被关闭的情况(原因暂不明)，因此添加此开关，开启后可恢复之前版本的通信方式。


        \n\n<b>3. 其他问题</b>
        \n\t\t1) 截至2024.2.28，模块版本1.6.3，红米K30Pro(lmi，MIUI13 22.7.8，安卓12)，红米Note5P(whyred，Nusantara，安卓13)。并不会与millet与NoActive 3.0(303)/3.1/3.2冲突，如果出现无法冻结请自行查找原因。
    </string>
    <string name="settingsAutoStopCompactPrefSummaryText" translatable="false">无后台进程时自动停止检查任务</string>
    <string name="configureAppProcessAppDoNothingSwitch">White list</string>
    <string name="configureAppProcessAppDoNothingSwitchSummary" translatable="false">启用后不再进行OOM之外的操作</string>
    <string name="appItemBackgroundTrimMemText" translatable="false">后台内存回收</string>
    <string name="appItemBackgroundGcText" translatable="false">后台GC</string>
    <string name="appItemForegroundTrimMemText" translatable="false">前台内存回收</string>
    <string name="configureAppProcActivityToolBarHelpMenuItem">Help</string>
    <string name="configureAppProcToolBarHelpTipText" translatable="false">
        1. 白名单：设置为白名单的app只会进行最基础的OOM调节，而不会有其他操作。
    </string>
    <string name="installerAppToolbarHelpMenuItem">Help</string>
    <string name="installedAppToolbarHelpTipText" translatable="false">所有配置的修改，只有在重新进入“已安装app列表”的时候才会刷新界面显示</string>
    <string name="settingsToolbarBackupMenuItem">Backup</string>
    <string name="settingsToolbarRestoreMenuItem">Restore</string>
    <string name="settingsOomStrictMode">Strict oom mode</string>
    <string name="settingsOomStrictModeSummary" translatable="false">开启以将主进程的最大adj限制到更低水平</string>
    <string name="settingsOomWorkModePrefText">OOM work mode</string>
    <string name="configureAppProcessCustomMainProcessOomScoreText">Custom main Process oom score</string>
    <string name="configureAppProcessCustomMainProcessBgAdjTipText" translatable="false">后台Adj</string>
    <string name="configureAppProcessCustomMainProcessFgAdjTipText" translatable="false">前台Adj</string>
    <string name="configureAppProcessCustomMainProcessAdjTipText" translatable="false">空 / [-1000, 1000]</string>
    <string name="configureAppProcessCustomMainProcessOomScoreApplyBtn">Apply</string>
    <string name="configureAppProcessForegroundMemoryTrim">Foreground Mem Trim</string>
    <string name="configureAppProcessBackgroundMemoryTrim">Background Mem Trim</string>
    <string name="configureAppProcessBackgroundGc">Background Gc</string>
    <string name="itemInstalledAppsMemTrimFlagText" translatable="false">App内存回收策略</string>
    <string name="itemInstalledAppsCustomMainProcOomScoreFlagText" translatable="false">自定义主进程OOM</string>
    <string name="itemInstalledAppsOomPolicyFlagText" translatable="false">OOM策略</string>
    <string name="configAppProcessFgMemTrimDefaultRadio">Default</string>
    <string name="configAppProcessFgMemTrimEnableRadio">Enable</string>
    <string name="main_activity_module_active_state_tip" translatable="false">模块激活状态:</string>
    <string name="main_activity_mem_opt_threshold" translatable="false">触发压缩的内存阈值:</string>
    <string name="main_activity_max_adj_score" translatable="false">主进程最大oom分数:</string>
    <string name="getManagedAdjDefalutAppsBtn" translatable="false">获取被管理ADJ的默认app</string>
    <string name="running_processes_user_app_category_menu_item">User</string>
    <string name="running_processes_system_app_category_menu_item">System</string>
    <string name="running_processes_all_app_category_menu_item">All</string>
    <string name="fg_adj_tip_text">Foreground adj</string>
    <string name="bg_adj_tip_text">Background adj</string>
    <string name="process_adj_tip_text">Null / [-1000, 1000]</string>
</resources>