<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/subProcessOomPolicyDialogRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/subProcessOomPolicyDialogDefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/subProcessOomPolicyDialogDefaultBtn" />

        <RadioButton
            android:id="@+id/subProcessOomPolicyDialogMainProcessBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subProcessOomPolicyDialogMainProcessBtn" />

        <RadioButton
            android:id="@+id/subProcessOomPolicyDialogDoNothingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subProcessOomPolicyDialogDoNothingBtn"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/subProcessOomPolicyDialogCustomBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subProcessOomPolicyDialogCustomBtn" />

        <include
            android:id="@+id/adj_input_layout"
            layout="@layout/view_custom_adj_fg_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>