<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:divider="@drawable/item_space_horizontal"
    android:orientation="horizontal"
    android:showDividers="middle">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/fg_adj_tip_text"
        app:helperText="@string/process_adj_tip_text"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fg_adj_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number|numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/bg_adj_tip_text"
        app:helperText="@string/process_adj_tip_text"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bg_adj_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number|numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>